# inheritance-demo

./: CMakeLists.txt  Frog.cpp  Frog.h  Lion.cpp  Lion.h  LivingBeing.cpp  LivingBeing.h  inheritance-demo.cpp  inheritance-demo.h  readme.md
